# server-room-api

./: Cargo.toml  Dockerfile  Readme.md  cloudbuild.yaml  deploy.sh
src/: main.rs
