[package]
name = "real-time-data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde_json = "1.0"